src/objects/Data_Tracking_Project__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <description>Account Name Picklist</description>
        <inlineHelpText>Enter status of Account Name</inlineHelpText>
        <label>Name</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Notes__c</fullName>
        <description>Enter notes for Opportunity field</description>
        <inlineHelpText>Enter notes for Opportunity field</inlineHelpText>
        <label>Opportunity Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Picklist_Notes__c</fullName>
        <description>Enter notes for Opportunity Picklist field</description>
        <inlineHelpText>Enter notes for Opportunity Picklist field</inlineHelpText>
        <label>Opportunity Picklist Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Picklist__c</fullName>
        <description>What is the status of the Opportunity?</description>
        <inlineHelpText>What is the status of the Opportunity?</inlineHelpText>
        <label>Opportunity Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Data Project Opportunity</description>
        <inlineHelpText>Data Project Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Data Tracking Projects</relationshipLabel>
        <relationshipName>Data_Tracking_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ops_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have all operations checks been completed?</description>
        <inlineHelpText>Have all operations checks been completed?</inlineHelpText>
        <label>Ops Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJM_ID_Notes__c</fullName>
        <description>Enter notes for PJM ID field</description>
        <inlineHelpText>Enter notes for PJM ID field</inlineHelpText>
        <label>PJM ID Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJM_ID__c</fullName>
        <description>PJM ID</description>
        <inlineHelpText>Enter status of PJM ID</inlineHelpText>
        <label>PJM ID</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_in_Full_Date_Notes__c</fullName>
        <description>Enter notes for Paid in Full Date field</description>
        <inlineHelpText>Enter notes for Paid in Full Date field</inlineHelpText>
        <label>Paid in Full Date Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_in_Full_Date__c</fullName>
        <description>Project Paid in Full Date</description>
        <inlineHelpText>Enter status of Paid in Full Date</inlineHelpText>
        <label>Paid in Full Date</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Panel_Serial_Numbers_Leased_Systems_Onl__c</fullName>
        <description>Panel Serial Numbers (Leased systems only)</description>
        <inlineHelpText>Enter status of Panel Serial Numbers (for leased systems only)</inlineHelpText>
        <label>Panel Serial Numbers (Leased Systems Onl</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Panel_Serial_Numbers_Notes__c</fullName>
        <description>Enter notes for Panel Serial Numbers field</description>
        <inlineHelpText>Enter notes for Panel Serial Numbers field</inlineHelpText>
        <label>Panel Serial Numbers Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch_and_Azimuth_Notes__c</fullName>
        <description>Enter notes for Pitch and Azimuth field</description>
        <inlineHelpText>Enter notes for Pitch and Azimuth field</inlineHelpText>
        <label>Pitch and Azimuth Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch_and_Azimuth__c</fullName>
        <description>Pitch and Azimuth of Property.</description>
        <inlineHelpText>Enter status of Property&apos;s Pitch and Azimuth</inlineHelpText>
        <label>Pitch and Azimuth</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Start_Date_Notes__c</fullName>
        <description>Enter notes for Production Start Date field</description>
        <inlineHelpText>Enter notes for Production Start Date field</inlineHelpText>
        <label>Production Start Date Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Start_Date__c</fullName>
        <description>Production Start Date (Used to be Ops SD)</description>
        <inlineHelpText>Enter status of Production Start Date (used to be Ops SD)</inlineHelpText>
        <label>Production Start Date</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Lead_Notes__c</fullName>
        <description>Enter notes for Project Lead field</description>
        <inlineHelpText>Enter notes for Project Lead field</inlineHelpText>
        <label>Project Lead Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <description>Project Lead</description>
        <inlineHelpText>Enter status of Project Lead</inlineHelpText>
        <label>Project Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <description>Enter notes for Project field</description>
        <inlineHelpText>Enter notes for Project field</inlineHelpText>
        <label>Project Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Picklist_Notes__c</fullName>
        <description>Enter notes for Project Picklist field</description>
        <inlineHelpText>Enter notes for Project Picklist field</inlineHelpText>
        <label>Project Picklist Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Picklist__c</fullName>
        <description>Picklist for Project of Data Tracking Project</description>
        <inlineHelpText>Enter status of Project</inlineHelpText>
        <label>Project Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>Status of Data Tracking Project</description>
        <inlineHelpText>Status of Data Tracking Project</inlineHelpText>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Review</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Check</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
                <color>#DDDDDD</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project of Data Tracking Project</description>
        <inlineHelpText>Project of Data Tracking Project</inlineHelpText>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Data Tracking Projects</relationshipLabel>
        <relationshipName>Data_Tracking_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Notes__c</fullName>
        <description>Enter notes for Property field</description>
        <inlineHelpText>Enter notes for Property field</inlineHelpText>
        <label>Property Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Picklist_Notes__c</fullName>
        <description>Enter notes for Property Picklist field</description>
        <inlineHelpText>Enter notes for Property Picklist field</inlineHelpText>
        <label>Property Picklist Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Picklist__c</fullName>
        <description>Picklist for Data Tracking Project Property</description>
        <inlineHelpText>Enter status of Property</inlineHelpText>
        <label>Property Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Data Tracking Project Property</description>
        <inlineHelpText>Data Tracking Project Property</inlineHelpText>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Data Tracking Projects</relationshipLabel>
        <relationshipName>Data_Tracking_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QB_Billing_Address_1__c</fullName>
        <description>QuickBooks Billing Address 1</description>
        <inlineHelpText>QuickBooks Billing Address 1</inlineHelpText>
        <label>QB Billing Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Billing_Address_2__c</fullName>
        <description>QuickBooks Billing Address 2</description>
        <inlineHelpText>QuickBooks Billing Address 2</inlineHelpText>
        <label>QB Billing Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Billing_City__c</fullName>
        <description>QuickBooks Billing City</description>
        <inlineHelpText>QuickBooks Billing City</inlineHelpText>
        <label>QB Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Billing_Email__c</fullName>
        <description>QuickBooks Billing Email</description>
        <inlineHelpText>QuickBooks Billing Email</inlineHelpText>
        <label>QB Billing Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Billing_Name__c</fullName>
        <description>QuickBooks Billing Name</description>
        <inlineHelpText>QuickBooks Billing Name</inlineHelpText>
        <label>QB Billing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Billing_Phone__c</fullName>
        <description>QuickBooks Billing Phone Number</description>
        <inlineHelpText>QuickBooks Billing Phone Number</inlineHelpText>
        <label>QB Billing Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Billing_State__c</fullName>
        <description>QuickBooks Billing State</description>
        <inlineHelpText>QuickBooks Billing State</inlineHelpText>
        <label>QB Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Billing_Zip__c</fullName>
        <description>QuickBooks Billing Zip Code</description>
        <inlineHelpText>QuickBooks Billing Zip Code</inlineHelpText>
        <label>QB Billing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Inspection_Date__c</fullName>
        <description>QuickBooks Inspection Date</description>
        <inlineHelpText>QuickBooks Inspection Date</inlineHelpText>
        <label>QB Inspection Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Inspection_Payment_Date__c</fullName>
        <description>QuickBooks Inspection Payment Date</description>
        <inlineHelpText>QuickBooks Inspection Payment Date</inlineHelpText>
        <label>QB Inspection Payment Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Revenue__c</fullName>
        <description>QuickBooks Revenue ($)</description>
        <inlineHelpText>QuickBooks Revenue ($)</inlineHelpText>
        <label>QB Revenue ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDQ_Matches_Contract_Notes__c</fullName>
        <description>Enter notes for SDQ Matches Contract field</description>
        <inlineHelpText>Enter notes for SDQ Matches Contract field</inlineHelpText>
        <label>SDQ Matches Contract Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDQ_Matches_Contract__c</fullName>
        <description>PURCHASE ONLY. SDQ Final Adjusted Price is not equal to Total of Invoices</description>
        <inlineHelpText>PURCHASE ONLY. System Design Quote Final Adjusted Price is not equal to Total of Invoices</inlineHelpText>
        <label>SDQ Matches Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have all sales checks been completed?</description>
        <inlineHelpText>Have all sales checks been completed?</inlineHelpText>
        <label>Sales Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Notes__c</fullName>
        <description>Enter notes for Sales Order field</description>
        <inlineHelpText>Enter notes for Sales Order field</inlineHelpText>
        <label>Sales Order Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Picklist_Notes__c</fullName>
        <description>Enter notes for Sales Order Picklist field</description>
        <inlineHelpText>Enter notes for Sales Order Picklist field</inlineHelpText>
        <label>Sales Order Picklist Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Picklist__c</fullName>
        <description>Sales Order Picklist</description>
        <inlineHelpText>Enter status of Sales Order</inlineHelpText>
        <label>Sales Order Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Missing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Data Tracking Project Sales Order</description>
        <inlineHelpText>Data Tracking Project Sales Order</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>Data Tracking Projects</relationshipLabel>
        <relationshipName>Data_Tracking_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Design_Array_Notes__c</fullName>
        <description>Enter notes for System Design Array field</description>
        <inlineHelpText>Enter notes for System Design Array field</inlineHelpText>
        <label>System Design Array Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Design_Array__c</fullName>
        <description>System Design Array</description>
        <inlineHelpText>Enter status of System Design Array</inlineHelpText>
        <label>System Design Array</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Design_Items_Notes__c</fullName>
        <description>Enter notes for System Design Items field</description>
        <inlineHelpText>Enter notes for System Design Items field</inlineHelpText>
        <label>System Design Items Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Design_Items__c</fullName>
        <description>System Design Items</description>
        <inlineHelpText>Enter status of System Design Items</inlineHelpText>
        <label>System Design Items</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Design_Q__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Design Quote</description>
        <inlineHelpText>System Design Quote</inlineHelpText>
        <label>System Design Quote</label>
        <referenceTo>System_Design_Quote__c</referenceTo>
        <relationshipLabel>Data Tracking Projects</relationshipLabel>
        <relationshipName>Data_Tracking_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Design_Quote_Notes__c</fullName>
        <description>Enter notes for System Design Quote field</description>
        <inlineHelpText>Enter notes for System Design Quote field</inlineHelpText>
        <label>System Design Quote Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Design_Quote_Picklist_Notes__c</fullName>
        <description>Enter notes for System Design Quote Picklist field</description>
        <inlineHelpText>Enter notes for System Design Quote Picklist field</inlineHelpText>
        <label>System Design Quote Picklist Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Design_Quote__c</fullName>
        <description>System Design Quote Picklist</description>
        <inlineHelpText>Enter status of System Design Quote</inlineHelpText>
        <label>System Design Quote Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Makeup_Opp_Notes__c</fullName>
        <description>Enter notes for System Makeup Opp field</description>
        <inlineHelpText>Enter notes for System Makeup Opp field</inlineHelpText>
        <label>System Makeup Opp Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Makeup_Opp__c</fullName>
        <description>Quoted System Makeup on Opp matches Invoice and Enphase (i.e. shows correct panel count and type)</description>
        <inlineHelpText>Quoted System Makeup on Opp matches Invoice and Enphase (i.e. shows correct panel count and type)</inlineHelpText>
        <label>System Makeup Opp</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Makeup_SO_Notes__c</fullName>
        <description>Enter notes for System Makeup SO field</description>
        <inlineHelpText>Enter notes for System Makeup SO field</inlineHelpText>
        <label>System Makeup SO Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Makeup_SO__c</fullName>
        <description>System Makeup on Sales Order is inconsistent with System Design on Opp?</description>
        <inlineHelpText>System Makeup on Sales Order is inconsistent with System Design on Opp?</inlineHelpText>
        <label>System Makeup SO</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSRF_Notes__c</fullName>
        <description>Enter notes for TSRF field</description>
        <inlineHelpText>Enter notes for TSRF field</inlineHelpText>
        <label>TSRF Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSRF__c</fullName>
        <description>Property TSRF. Generally TSRF is calculated by dividing IL&apos;s SQ by optimal SQ.</description>
        <inlineHelpText>Enter status of Property&apos;s TSRF</inlineHelpText>
        <label>TSRF</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Notes__c</fullName>
        <description>Enter notes for Utility field</description>
        <inlineHelpText>Enter notes for Utility field</inlineHelpText>
        <label>Utility Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <description>Property Utility</description>
        <inlineHelpText>Enter status of Property Utility</inlineHelpText>
        <label>Utility</label>
        <picklist>
            <picklistValues>
                <fullName>Already Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Tracking Project</label>
    <listViews>
        <fullName>DTP_with_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Check__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>System_Design_Q__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DTP with Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DTP_with_Quickbooks_Data</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Notes__c</columns>
        <columns>QB_Billing_Name__c</columns>
        <columns>QB_Billing_Address_1__c</columns>
        <columns>QB_Billing_Address_2__c</columns>
        <columns>QB_Billing_City__c</columns>
        <columns>QB_Billing_State__c</columns>
        <columns>QB_Billing_Zip__c</columns>
        <columns>QB_Billing_Email__c</columns>
        <columns>QB_Billing_Phone__c</columns>
        <columns>QB_Inspection_Date__c</columns>
        <columns>QB_Inspection_Payment_Date__c</columns>
        <columns>QB_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <label>DTP with Quickbooks Data</label>
    </listViews>
</CustomObject>